--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "jest": "^29.2.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.24.0"
