--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
       "password": "3348",
       "database": "wanted",
       "host": "127.0.0.1",
-      "dialect": "mysql"
+      "dialect": "mysql",
+      "logging": false
     },
     "test": {
       "username": "root",
