--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,7 @@
       "password": "3348",
       "database": "wanted",
       "host": "127.0.0.1",
-      "dialect": "mysql",
-      "logging": false
+      "dialect": "mysql"
     },
     "test": {
       "username": "root",
